<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/main_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/acme"
        android:text="@string/dicoding_submission"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/acme"
        android:text="@string/list_of_github_user"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ivAvatarAbout"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/user1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnShare"
        android:layout_width="41dp"
        android:layout_height="35dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/ic_baseline_share_24"
        app:layout_constraintStart_toEndOf="@+id/tvUsernameAbout"
        app:layout_constraintTop_toBottomOf="@+id/ivAvatarAbout"
        android:contentDescription="@string/share" />

    <TextView
        android:id="@+id/tvUsernameAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/sobarna11"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivAvatarAbout" />

    <TextView
        android:id="@+id/tvFollowingAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="12dp"
        android:text="@string/pengikut"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUsernameAbout" />

    <TextView
        android:id="@+id/tvRepositoryAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="12dp"
        android:text="@string/pekerjaan"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/tvFollowingAbout"
        app:layout_constraintTop_toBottomOf="@+id/tvUsernameAbout" />

    <TextView
        android:id="@+id/tvFollowersAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="12dp"
        android:text="@string/mengikuti"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/tvRepositoryAbout"
        app:layout_constraintTop_toBottomOf="@+id/tvUsernameAbout" />

    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="300dp"
        app:cardCornerRadius="8dp"
        android:background="@drawable/background_rectangle"
        android:layout_marginTop="57dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRepositoryAbout">

        <TextView
            android:id="@+id/tvNameAbout"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:text="@string/name_dwi_aji_sobarna"
            android:layout_marginStart="20dp"/>

        <TextView
            android:id="@+id/tvLocationAbout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:layout_marginStart="20dp"
            android:text="@string/location_serang_city"
            android:textSize="24sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/tvCompanyAbout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/company_sobarna_farm"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="20dp"/>


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>