<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.DetailActivity">


    <ProgressBar
        android:id="@+id/pbDetailUser"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/main_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/acme"
        android:text="@string/dicoding_submission"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/acme"
        android:text="@string/list_of_github_user"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <de.hdodenhof.circleimageview.CircleImageView
        tools:src="@drawable/user1"
        android:id="@+id/ivAvatarAbout"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="116dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvUsernameAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        tools:text="@string/sobarna11"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivAvatarAbout" />

    <TextView
        android:id="@+id/tvFollowingAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="16dp"
        android:text="@string/pengikut"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUsernameAbout" />

    <TextView
        android:id="@+id/tvRepositoryAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="16dp"
        android:text="@string/pekerjaan"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/tvFollowingAbout"
        app:layout_constraintTop_toBottomOf="@+id/tvUsernameAbout" />

    <TextView
        android:id="@+id/tvFollowersAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="16dp"
        android:text="@string/mengikuti"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/tvRepositoryAbout"
        app:layout_constraintTop_toBottomOf="@+id/tvUsernameAbout" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="269dp"
        android:layout_height="112dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/background_rectangle"
        app:cardCornerRadius="8dp"
        app:layout_constraintStart_toEndOf="@+id/ivAvatarAbout"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <TextView
            android:id="@+id/tvNameAbout"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_gravity="top"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            tools:text="@string/name_dwi_aji_sobarna"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvLocationAbout"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="85dp"
            tools:text="@string/location_serang_city"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvCompanyAbout"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="45dp"
            tools:text="@string/company_sobarna_farm"
            android:textColor="@color/black"
            android:textSize="14sp" />

    </androidx.cardview.widget.CardView>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tlDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/background_tab"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRepositoryAbout">

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPagerDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tlDetail" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fabFavoriteButton"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="#EF2121"
        android:backgroundTint="#4A919A"
        android:src="@drawable/ic_baseline_favorite_border_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        android:contentDescription="@string/fab_transformation_scrim_behavior" />

</androidx.constraintlayout.widget.ConstraintLayout>
