<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:layout_marginTop="10dp"
    android:layout_height="wrap_content"
    android:background="@drawable/background_rectangle"
    android:layout_width="match_parent"
    android:layout_gravity="center_horizontal"
    app:cardCornerRadius="8dp"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_marginStart="14dp"
        android:layout_marginTop="14dp"
        android:id="@+id/ivAvatarList"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/user1"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/tvUsernameList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/userid"
        android:textSize="24sp"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:layout_marginStart="150dp"/>
    <TextView
        android:id="@+id/tvFollowersList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mengikuti"
        android:textSize="12sp"
        android:textColor="@color/black"
        android:layout_marginStart="150dp"
        android:layout_marginTop="80dp"/>

    <TextView
        android:id="@+id/tvFollowingList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pengikut"
        android:textSize="12sp"
        android:textColor="@color/black"
        android:layout_marginStart="270dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="80dp"/>



</androidx.cardview.widget.CardView>
